responsive and dark mode fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1377,7 +1377,7 @@ div.image img{
 
 
   button.NotificationDelButton {
-    margin-left: 290px;
+    margin-left: 200px;
     margin-top: 90px;
   }
 
