--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -257,7 +257,7 @@ header .nav {
   width: 24px;
   height: 24px;
   border-radius: 50%;
-  color: white;
+  color: var(--color-dark);
 }
 
 .premiumHeader {
